# mono

./: .bazelrc  .ci.bazelrc  .ci.darwin.startup.bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CHECKS.toml  CHECKS.yaml  Cargo.toml  MODULE.bazel  REPOBIN.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.jjconflict-base-0/tools/checkleft_package/: Cargo.toml
.jjconflict-side-2/tools/checkleft_package/: BUILD.bazel
.jjconflict-side-2/tools/hood/: BUILD.bazel
lib/rust/broker-robinhood/: BUILD.bazel  Cargo.toml
lib/rust/broker-robinhood/src/: client.rs  error.rs  lib.rs
lib/rust/git_utils/: BUILD.bazel  Cargo.toml
lib/rust/git_utils/src/: gh_cli.rs  lib.rs  pr_bookmark.rs  repo_slug.rs
tools/boss/app-macos/: BUILD.bazel  Info.plist  Package.resolved  Package.swift  README.md  ghosttykit.BUILD
tools/boss/app-macos/Sources/: ActivityLogView.swift  AttentionModels.swift  AttentionsView.swift  AutomationsView.swift  BossEnginePaths.swift  BossMacApp.swift  ChatViewModel+Attentions.swift  ChatViewModel+BoardHelpers.swift  ChatViewModel+BossSession.swift  ChatViewModel+Comments.swift  ChatViewModel+Connection.swift  ChatViewModel+DeferredScope.swift  ChatViewModel+Dependencies.swift  ChatViewModel+DesignDocs.swift  ChatViewModel+EventHandling.swift  ChatViewModel+Planner.swift  ChatViewModel+PopulationTiming.swift  ChatViewModel+SortHelpers.swift  ChatViewModel+TaskDoc.swift  ChatViewModel+WorkBoardSections.swift  ChatViewModel+WorkItemEvents.swift  ChatViewModel.swift  ContentView.swift  ContentViewChrome.swift  DeferredScopeAttentions.swift  DesignRendererView.swift  DesignsView.swift  DispatchEventsViewer.swift  EditorialControlsSheet.swift  EngineClient+PaneResponses.swift  EngineClient+Parsers.swift  EngineClient+Requests.swift  EngineClient.swift  EngineEvent.swift  EngineProcessController.swift  EngineProtocolTypes.swift  ExternalTrackerBanners.swift  FeatureFlagsViewer.swift  KanbanBoardStyle.swift  LogViewer.swift  (+33 more)
tools/boss/app-macos/scripts/: bootstrap-ghosttykit.sh  stub-ghosttykit-xcframework.sh
tools/boss/app-macos/testing/: BUILD.bazel  macos_runner.bzl  runner.template.sh  runner.template.xctestrun
tools/boss/bossctl/: BUILD.bazel  Cargo.toml  README.md
tools/boss/bossctl/src/: agents.rs  comments.rs  dispatch_stats.rs  hosts.rs  main.rs  review.rs  tests.rs
tools/boss/build-info/: BUILD.bazel  Cargo.toml
tools/boss/build-info/src/: build_info_default.rs  lib.rs
tools/boss/build-provenance/: BUILD.bazel  Cargo.toml  build.rs
tools/boss/build-provenance/src/: lib.rs  provenance_default.rs
tools/boss/claude_client/: BUILD.bazel  Cargo.toml
tools/boss/claude_client/src/: lib.rs
tools/boss/cli/: BUILD.bazel  Cargo.toml  README.md  build.rs
tools/boss/cli/src/: automation_cmds.rs  buildkite_release.rs  commands.rs  context.rs  data.rs  engine_cmds.rs  github_app.rs  main.rs  output.rs  propose.rs  repo_resolution.rs  tests.rs  work_cmds.rs
tools/boss/cli/tests/: audit_effort.rs  blocked_reason_length_limit.rs  editorial.rs  effort_and_model.rs  engine_ci_verbs.rs  external_tracker.rs  friendly_id.rs  infer_product.rs  repo_resolution.rs  shake.rs  uninstall.rs
tools/boss/client/: BUILD.bazel  Cargo.toml
tools/boss/client/src/: lib.rs
tools/boss/comment_anchor/: BUILD.bazel  Cargo.toml
tools/boss/comment_anchor/src/: lib.rs
tools/boss/engine/: BUILD.bazel  Cargo.toml
tools/boss/engine/automation-dedup/: BUILD.bazel  Cargo.toml
tools/boss/engine/automation-schedule/: BUILD.bazel  Cargo.toml
tools/boss/engine/ci-log-reader/: BUILD.bazel  Cargo.toml
tools/boss/engine/comment-classifier/: BUILD.bazel  Cargo.toml
tools/boss/engine/conflict-diagnosis/: BUILD.bazel  README.md
tools/boss/engine/core/: BUILD.bazel  Cargo.toml  build.rs
tools/boss/engine/day-rotated-log/: BUILD.bazel  Cargo.toml
tools/boss/engine/design-doc-fetcher/: BUILD.bazel  Cargo.toml
tools/boss/engine/design-docs/: BUILD.bazel  Cargo.toml
tools/boss/engine/deterministic-resolvers/: BUILD.bazel  Cargo.toml
tools/boss/engine/dispatch-events/: BUILD.bazel  Cargo.toml
tools/boss/engine/driver/: BUILD.bazel  Cargo.toml
tools/boss/engine/editorial/: BUILD.bazel  README.md
tools/boss/engine/effort/: BUILD.bazel  Cargo.toml
tools/boss/engine/event-bus/: BUILD.bazel  Cargo.toml
tools/boss/engine/external-tracker/: BUILD.bazel  Cargo.toml
tools/boss/engine/feature-flags/: BUILD.bazel  (+1 more)
tools/checkleft/: BUILD  BUILD.bazel  CHECKS.yaml  Cargo.toml  PROJECT.yaml  README.md  build.rs  precompile_cwasm.rs
tools/checkleft/api/: BUILD.bazel
tools/checkleft/bazel/: BUILD.bazel  defs.bzl
tools/checkleft/docs/: buildkite-release-setup.md  surface-findings-github-ui.md
tools/checkleft/musl/: ext.bzl  transition.bzl
tools/checkleft/preinstalled-bundle/: BUILD.bazel  Cargo.toml
tools/checkleft/sdk/: BUILD.bazel  Cargo.toml
tools/checkleft/sdk-macro/: BUILD.bazel
tools/checkleft/src/: bypass.rs  check.rs  config.rs  exclusion.rs  ifchange.rs  input.rs  lib.rs  main.rs  output.rs  runner.rs  source_tree.rs  tests.rs  vcs.rs
tools/checkleft/tests/: change_detection_e2e.rs  giant_struct_wasm_e2e.rs
tools/checkleft/wasm/: BUILD.bazel  componentize.sh  defs.bzl  toolchain.bzl  verify_component_sha.sh  wasm_tools.BUILD
tools/checkleft/wit/: BUILD.bazel  check.wit
tools/checkleft_package/: BUILD.bazel  README.md
tools/checkleft_package/src/: lib.rs  main.rs
tools/cube/: BUILD.bazel  CHECKS.toml  Cargo.toml  README.md
tools/cube/docs/: main.md  remaining-work.md
tools/cube/src/: app.rs  audit.rs  cli.rs  command_runner.rs  config.rs  lib.rs  lock.rs  main.rs  metadata.rs  paths.rs  reuse_guard.rs  setup.rs  store.rs
tools/hood/: BUILD.bazel  Cargo.toml
tools/hood/src/: creds.rs  main.rs
tools/repobin/: BUILD.bazel  Cargo.toml  README.md
tools/repobin/src/: app.rs  bazel.rs  cache.rs  cli.rs  config.rs  dispatch.rs  dispatch_cache.rs  install.rs  lib.rs  lock.rs  main.rs  pin.rs
tools/runshim/: BUILD.bazel  Cargo.toml
tools/runshim/src/: app.rs  bazel.rs  cli.rs  config.rs  dispatch.rs  install.rs  lib.rs  main.rs
(+1154 files in other folders)
