load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

exports_files(["Cargo.toml"])

rust_library(
    name = "broker-robinhood",
    crate_name = "broker_robinhood",
    srcs = [
        "src/auth.rs",
        "src/client.rs",
        "src/error.rs",
        "src/lib.rs",
    ],
    deps = [
        "@crates//:reqwest",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:uuid",
        "@crates//:url",
    ],
)

rust_test(
    name = "broker_robinhood_tests",
    size = "small",
    crate = ":broker-robinhood",
    deps = [
        "@crates//:serde_json",
        "@crates//:wiremock",
    ],
)

rust_binary(
    name = "robinhood_auth_cli",
    crate_name = "robinhood_auth",
    srcs = ["src/bin/robinhood_auth.rs"],
    deps = [
        ":broker-robinhood",
        "@crates//:tokio",
        "@crates//:serde_json",
    ],
)
