load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")
load("@npm//:defs.bzl", "npm_link_all_packages")

# Root BUILD file

# Detects Bazel's optimised compilation mode (-c opt / --compilation_mode=opt).
# Use in select() to apply flags (e.g. -Cstrip=symbols) only on release builds.
config_setting(
    name = "opt_mode",
    values = {"compilation_mode": "opt"},
    visibility = ["//visibility:public"],
)

exports_files([
    "Cargo.lock",
    "Cargo.toml",
    "package.json",
    "pnpm-lock.yaml",
    "pnpm-workspace.yaml",
])

npm_link_all_packages(name = "node_modules")

npm_link_package(
    name = "node_modules/@checkleft/exec",
    src = "//tools/checkleft/api:checkleft_exec_pkg",
)
