[workspace]
members = [
  "lib/rust/broker-robinhood",
  "tools/hood",
  "tools/boss/engine",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.97"
clap = "4.5.39"
reqwest = "0.11"
serde = "1.0.219"
serde_json = "1.0.140"
serde_urlencoded = "0.7"
shlex = "1.3.0"
thiserror = "1.0"
tokio = "1.45.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2"
uuid = "1"
which = "7.0.3"
wiremock = "0.5.22"
