[workspace]
members = [
  "lib/rust/broker-robinhood",
  "tools/hood",
  "tools/boss/engine",
  "tools/checkleft",
  "tools/cube",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.97"
async-trait = "0.1.86"
clap = "4.5.39"
comfy-table = "7.2.2"
console = "0.15.11"
globset = "0.4.18"
indicatif = "0.17.11"
keyring = "3.6.3"
regex = "1.11.1"
reqwest = "0.11"
rpassword = "7.4.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
serde_urlencoded = "0.7"
shlex = "1.3.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
sha2 = "0.10.9"
tempfile = "3.25.0"
thiserror = "1.0"
tokio = "1.45.0"
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2"
uuid = "1"
walkdir = "2.5.0"
wasmtime = "29.0.1"
wat = "1.240.0"
which = "7.0.3"
wiremock = "0.5.22"
