module(
    name = "mono",
)

bazel_dep(name = "rules_rust", version = "0.68.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2024")
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "boss_engine_crates",
    cargo_lockfile = "//tools/boss/engine:Cargo.lock",
    manifests = ["//tools/boss/engine:Cargo.toml"],
)
use_repo(crate, "boss_engine_crates")
