load("@mono_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

exports_files(["Cargo.toml"])

rust_library(
    name = "checkleft_lib",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ),
    crate_name = "checkleft",
    crate_root = "src/lib.rs",
    edition = "2024",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//:__subpackages__"],
    deps = all_crate_deps(normal = True) + [
        "@@rules_rust++crate+mono_crates__syn-2.0.117//:syn",
    ],
)

rust_binary(
    name = "checkleft",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/main.rs",
    edition = "2024",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    # CHECKLEFT_VERSION is set via --define by the release pipeline; .bazelrc
    # defaults it to "0.0.0-dev" for local and CI non-release builds.
    rustc_env = {
        "CHECKLEFT_BUILD_VERSION": "$(CHECKLEFT_VERSION)",
    },
    visibility = ["//tools/checkleft/bazel:__pkg__"],
    deps = [
        ":checkleft_lib",
    ] + all_crate_deps(normal = True),
)

rust_test(
    name = "checkleft_lib_test",
    size = "small",
    crate = ":checkleft_lib",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "checkleft_bin_test",
    size = "small",
    crate = ":checkleft",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

# Functional / end-to-end change-detection suite: drives a real git repo (and a
# jj-colocated variant) through every scenario in the design matrix and asserts
# both the resolved base sha and the scoped file set. Exercises the public
# `resolve_change_plan` entry point exactly as the binary does. The vendored
# GitHub event payloads under tests/fixtures are embedded via include_str!.
rust_test(
    name = "change_detection_e2e_test",
    size = "small",
    srcs = ["tests/change_detection_e2e.rs"],
    compile_data = glob(["tests/fixtures/**"]),
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        ":checkleft_lib",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
