load("@mono_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("//tools/checkleft/musl:transition.bzl", "musl_binary")
load("//tools/checkleft/wasm:defs.bzl", "precompiled_cwasm_dir")

exports_files(["Cargo.toml"])

rust_library(
    name = "checkleft_lib",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ),
    # First-party check definitions embedded via include_str! (bundled.rs) and
    # the WIT package consumed by wasmtime::component::bindgen! at compile time
    # (component_bindings.rs). Both must be compile_data so they are readable
    # inside bazel's sandbox during proc-macro / macro expansion.
    compile_data = [
        "checks/format/bazel.yaml",
        "checks/format/biome.yaml",
        "checks/format/oxc.yaml",
        "checks/format/prettier.yaml",
        "checks/format/rust.yaml",
        "checks/lint/bazel.yaml",
        "checks/lint/biome.yaml",
        "checks/lint/js.yaml",
        "checks/lint/oxc.yaml",
        "checks/lint/rust.yaml",
        "//tools/checkleft/wit:check.wit",
    ],
    crate_name = "checkleft",
    crate_root = "src/lib.rs",
    edition = "2024",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    # IFCHANGE(wasmtime-version): keep in sync with the wasmtime dependency in
    # Cargo.toml.  CHECKLEFT_WASMTIME_VERSION is part of the .cwasm AOT cache
    # key (src/external/runtime/cwasm_cache.rs); it must change whenever
    # wasmtime is bumped so that stale .cwasm files are never deserialized.
    # build.rs emits the same value for cargo builds by reading Cargo.lock.
    # THENCHANGE(Cargo.toml)
    rustc_env = {
        "CHECKLEFT_WASMTIME_VERSION": "42.0.2",
    },
    visibility = ["//:__subpackages__"],
    deps = all_crate_deps(normal = True) + [
        "//tools/checkleft/preinstalled-bundle:checkleft_wasm_bundle_lib",
        "@@rules_rust++crate+mono_crates__syn-2.0.117//:syn",
    ],
)

rust_binary(
    name = "checkleft",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/main.rs",
    edition = "2024",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    # CHECKLEFT_VERSION is set via --define by the release pipeline; .bazelrc
    # defaults it to "0.0.0-dev" for local and CI non-release builds.
    rustc_env = {
        "CHECKLEFT_BUILD_VERSION": "$(CHECKLEFT_VERSION)",
    },
    visibility = ["//tools/checkleft/bazel:__pkg__"],
    deps = [
        ":checkleft_lib",
    ] + all_crate_deps(normal = True),
)

# Host tool: precompile each bundled wasm check component to an AOT `.cwasm`
# whose filename is the canonical runtime cache key (src/external/runtime/
# cwasm_cache.rs). Reuses checkleft_lib's `precompile_into_cache_dir`, so the
# wasmtime engine config and cache-key axes are guaranteed identical to the
# runtime — a mismatch would silently re-open the JIT path. Consumed by the
# precompiled_cwasm_dir rule below.
rust_binary(
    name = "precompile_cwasm",
    srcs = ["precompile_cwasm.rs"],
    crate_root = "precompile_cwasm.rs",
    edition = "2024",
    # Used only as the implicit `_precompile_tool` of `precompiled_cwasm_dir`,
    # whose rule is defined in //tools/checkleft/wasm. Bazel checks implicit-dep
    # visibility against the rule's definition package, so that package needs to
    # see it; same-package (//tools/checkleft) use is always allowed.
    visibility = ["//tools/checkleft/wasm:__pkg__"],
    deps = [
        ":checkleft_lib",
    ] + all_crate_deps(normal = True),
)

# Build-time AOT `.cwasm` fixtures for the bundled wasm check components, keyed to
# the runtime cache axes (artifact sha256 / wasmtime version / engine config /
# host target). Staged as `data` for checkleft_lib_test so the heavy
# `rust/giant-structs` tests deserialize the precompiled artifact (~20 ms) rather
# than JIT-compiling the component at runtime (~10 s in a debug test binary, and
# stacking up under test parallelism) — the cost that approached the 60 s
# small-test timeout. See
# docs/investigations/checkleft-lib-test-wasm-compile-timeout.md.
#
# Host-built, not committed: the `.cwasm` is not portable across wasmtime
# version / engine config / target, all of which the cache key already pins.
precompiled_cwasm_dir(
    name = "precompiled_cwasm",
    components = [
        "//tools/checkleft/preinstalled-bundle:preinstalled_bundle_component",
    ],
)

# Statically-linked Linux binary via musl cross-compilation.
# Builds checkleft for x86_64-unknown-linux-musl using the musl Rust toolchain
# registered in MODULE.bazel plus the hermetic_cc_toolchain (Zig CC) for any
# C deps (tree-sitter, wasmtime).  Output: a static ELF with no glibc dependency.
#
# Usage:
#   bazel build //tools/checkleft:checkleft_musl
#   file $(bazel cquery --output=files //tools/checkleft:checkleft_musl)
#     → should report "ELF 64-bit ... statically linked"
musl_binary(
    name = "checkleft_musl",
    binary = ":checkleft",
    visibility = ["//visibility:public"],
)

# `checkleft_lib_test` is split into shards along natural module boundaries
# rather than one monolithic rust_test, because a handful of its ~805 tests
# are inherently expensive even after the build-time `.cwasm` AOT fix (see
# docs/investigations/checkleft-lib-test-wasm-compile-timeout.md):
#   - external::declarative:: (180 tests) drives the real `buildifier` binary
#     as a subprocess for parity_e2e.
#   - external::runtime:: (64 tests) instantiates the wasmtime component-model
#     host (deserializing the AOT `.cwasm` fixture) for every giant-structs
#     check invocation.
# Sharding parallelizes these across independent Bazel test actions instead of
# serializing them inside one binary, mirroring the //tools/boss/engine/core
# `engine_lib_test_*` shards (same `crate = ` + `args = [test-name-filter]`
# mechanism). All three shards recompile the same full `checkleft_lib` crate
# (rust_test's `crate` attribute always builds the whole crate root with
# `--cfg test`), so they share identical compile_data/data/env/deps —
# `args` only filters which compiled tests are *run*.
#
# All shards share size = "small" / timeout = "moderate" (300 s), matching
# `engine_lib_test`'s rationale: Linux CI runners measure ~6-7x slower than
# local macOS, so the 60 s default for size = "small" is too tight even after
# sharding, while `size = "small"`'s scheduling/resource class (more
# parallelism than "medium") is still the right fit for these shards. This is
# distinct from — and not a reopening of — the investigation's explicitly
# rejected "bump size to medium" band-aid: `size` and `timeout` are
# independent Bazel attributes, and no shard's tests actually recompile the
# wasm component at runtime anymore (see the `giant_structs_component_for_test`
# fix in src/external/runtime/tests.rs, which was the real remaining root
# cause — three tests were calling `compile_component` directly instead of
# going through the AOT cache, each paying a ~35-45 s debug-mode JIT compile).
_CHECKLEFT_LIB_TEST_COMPILE_DATA = [
    # The yaml files are the canonical first-party check definitions; the fixtures
    # back the hermetic parity test in src/external/declarative/parity_e2e.rs;
    # check.wit is the WIT contract consumed by wasmtime::component::bindgen! at
    # compile time in component_bindings.rs. All are embedded/read at compile time,
    # and are needed by every shard since they all compile the same crate root.
    "checks/format/bazel.yaml",
    "checks/format/biome.yaml",
    "checks/format/oxc.yaml",
    "checks/format/prettier.yaml",
    "checks/format/rust.yaml",
    "checks/lint/bazel.yaml",
    "checks/lint/biome.yaml",
    "checks/lint/js.yaml",
    "checks/lint/oxc.yaml",
    "checks/lint/rust.yaml",
    "tests/fixtures/buildifier/malformed.bzl.fixture",
    "tests/fixtures/buildifier/unformatted.bzl.fixture",
    "//tools/checkleft/wit:check.wit",
]

# The real buildifier binary, staged into the test's runfiles so the
# declarative pipeline can run hermetically (no nested bazel) and be compared
# against the built-in BuildifierCheck. parity_e2e.rs resolves it from the
# CHECKLEFT_E2E_BUILDIFIER runfiles path via @rules_rust//rust/runfiles.
#
# :precompiled_cwasm stages the build-time AOT `.cwasm` fixtures; the heavy
# rust/giant-structs tests (both external::runtime:: and the exclusion-audit
# tests in runner::tests::) point their executor cache at this directory
# (resolved from CHECKLEFT_PRECOMPILED_CWASM_DIR via runfiles in
# external::test_support) so they deserialize the component instead of
# JIT-compiling it at runtime. Both fixtures are staged on every shard: which
# tests exercise them is a shard/`args` concern, but the underlying crate
# compile is identical across shards and `external::test_support` asserts
# loudly (rather than silently falling back to a slow JIT compile) if a test
# that needs the cache runs without it staged.
_CHECKLEFT_LIB_TEST_DATA = [
    ":precompiled_cwasm",
    "@buildifier_prebuilt//:buildifier",
]

_CHECKLEFT_LIB_TEST_ENV = {
    "CHECKLEFT_E2E_BUILDIFIER": "$(rlocationpath @buildifier_prebuilt//:buildifier)",
    "CHECKLEFT_PRECOMPILED_CWASM_DIR": "$(rlocationpath :precompiled_cwasm)",
}

rust_test(
    name = "checkleft_lib_test_declarative",
    size = "small",
    timeout = "moderate",
    args = ["external::declarative::"],
    compile_data = _CHECKLEFT_LIB_TEST_COMPILE_DATA,
    crate = ":checkleft_lib",
    data = _CHECKLEFT_LIB_TEST_DATA,
    env = _CHECKLEFT_LIB_TEST_ENV,
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ) + ["@rules_rust//rust/runfiles"],
)

rust_test(
    name = "checkleft_lib_test_wasm",
    size = "small",
    timeout = "moderate",
    args = ["external::runtime::"],
    compile_data = _CHECKLEFT_LIB_TEST_COMPILE_DATA,
    crate = ":checkleft_lib",
    data = _CHECKLEFT_LIB_TEST_DATA,
    env = _CHECKLEFT_LIB_TEST_ENV,
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ) + ["@rules_rust//rust/runfiles"],
)

# Everything else: runner::, config::, change_detection::, checks::, fix::,
# and the many small single-module test files — none of which recompile or
# instantiate the wasm component-model host, so this shard stays a couple of
# seconds even unsharded further.
rust_test(
    name = "checkleft_lib_test_rest",
    size = "small",
    timeout = "moderate",
    args = [
        "--skip",
        "external::declarative::",
        "--skip",
        "external::runtime::",
    ],
    compile_data = _CHECKLEFT_LIB_TEST_COMPILE_DATA,
    crate = ":checkleft_lib",
    data = _CHECKLEFT_LIB_TEST_DATA,
    env = _CHECKLEFT_LIB_TEST_ENV,
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ) + ["@rules_rust//rust/runfiles"],
)

# Umbrella target: `bazel test //tools/checkleft:checkleft_lib_test` runs all
# 3 shards (subject to --jobs), same as before the split.
test_suite(
    name = "checkleft_lib_test",
    tests = [
        ":checkleft_lib_test_declarative",
        ":checkleft_lib_test_rest",
        ":checkleft_lib_test_wasm",
    ],
)

rust_test(
    name = "checkleft_bin_test",
    size = "small",
    crate = ":checkleft",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

# Functional / end-to-end change-detection suite: drives a real git repo (and a
# jj-colocated variant) through every scenario in the design matrix and asserts
# both the resolved base sha and the scoped file set. Exercises the public
# `resolve_change_plan` entry point exactly as the binary does. The vendored
# GitHub event payloads under tests/fixtures are embedded via include_str!.
rust_test(
    name = "change_detection_e2e_test",
    size = "small",
    srcs = ["tests/change_detection_e2e.rs"],
    compile_data = glob(["tests/fixtures/**"]),
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        ":checkleft_lib",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
