[package]
name = "checkleft"
version.workspace = true
edition.workspace = true
workspace = "../.."

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
globset.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
walkdir.workspace = true
wasmtime.workspace = true

[dev-dependencies]
tempfile.workspace = true
wat.workspace = true
