[package]
name = "checkleft"
version.workspace = true
edition.workspace = true
workspace = "../.."

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
globset = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml = { workspace = true }
walkdir = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wat = { workspace = true }
