[package]
name = "checkleft"
version = "0.1.0-alpha.1"
edition.workspace = true
workspace = "../.."
description = "Experimental repository convention checker; API and behavior may change without notice"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/spinyfin/mono"
homepage = "https://github.com/spinyfin/mono"
documentation = "https://docs.rs/checkleft"
keywords = ["cli", "lint", "repository", "checks"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.93.1"
include = [
  "src/**",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE",
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "checkleft"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
globset = { workspace = true }
hashbrown = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
toml = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-starlark = { workspace = true }
walkdir = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wat = { workspace = true }
wiremock = { workspace = true }
