[package]
name = "cube"
version.workspace = true
edition.workspace = true
workspace = "../.."

[dependencies]
clap = { workspace = true, features = ["derive"] }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
