load("@mono_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

exports_files(["Cargo.toml"])

rust_binary(
    name = "hood",
    srcs = [
        "src/commands/auth.rs",
        "src/commands/mod.rs",
        "src/commands/status.rs",
        "src/creds.rs",
        "src/main.rs",
    ],
    deps = ["//lib/rust/broker-robinhood"] + all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)
