[package]
name = "hood"
version = "0.1.0"
edition = "2024"

[dependencies]
broker-robinhood = { path = "../../lib/rust/broker-robinhood" }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
