[package]
name = "hood"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
broker-robinhood = { path = "../../lib/rust/broker-robinhood" }
clap = { workspace = true, features = ["derive"] }
comfy-table = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
keyring = { workspace = true, features = ["apple-native"] }
rpassword = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
