load("@mono_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

exports_files([
    "Cargo.toml",
])

rust_library(
    name = "broker-robinhood",
    srcs = [
        "src/auth.rs",
        "src/client.rs",
        "src/error.rs",
        "src/lib.rs",
    ],
    crate_name = "broker_robinhood",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//tools/hood:__pkg__"],
    deps = all_crate_deps(normal = True),
)

rust_test(
    name = "broker_robinhood_tests",
    size = "small",
    crate = ":broker-robinhood",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
